# ut

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  clang-linux.yml  gcc.yml
cmake/: dev-mode.cmake
include/ut/: ut.cppm  ut.hpp  ut.hpp.in  ut.in
src/: main.cpp
tests/: ut_run_tests.cpp
